[gd_scene load_steps=2 format=3 uid="uid://dshop_ui_scene"]

[ext_resource type="Script" path="res://scripts/shop_ui.gd" id="1_script"]

[node name="ShopUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="ShopPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ShopPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ShopPanel/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="ShopPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ShopPanel/MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "SHOP"

[node name="ChipsContainer" type="HBoxContainer" parent="ShopPanel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2

[node name="ChipIcon" type="Label" parent="ShopPanel/MarginContainer/VBoxContainer/Header/ChipsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ðŸ’°"

[node name="ChipsLabel" type="Label" parent="ShopPanel/MarginContainer/VBoxContainer/Header/ChipsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="HSeparator" type="HSeparator" parent="ShopPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="ShopPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Buy Cards" type="VBoxContainer" parent="ShopPanel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="OffersContainer" type="HBoxContainer" parent="ShopPanel/MarginContainer/VBoxContainer/TabContainer/Buy Cards"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="RerollButton" type="Button" parent="ShopPanel/MarginContainer/VBoxContainer/TabContainer/Buy Cards"]
unique_name_in_owner = true
layout_mode = 2
text = "Reroll (FREE)"

[node name="Upgrade Cards" type="VBoxContainer" parent="ShopPanel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="UpgradeInfo" type="Label" parent="ShopPanel/MarginContainer/VBoxContainer/TabContainer/Upgrade Cards"]
layout_mode = 2
text = "Select a card to upgrade. Upgraded cards have stronger effects."
autowrap_mode = 2

[node name="DeckContainer" type="HBoxContainer" parent="ShopPanel/MarginContainer/VBoxContainer/TabContainer/Upgrade Cards"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Remove Cards" type="VBoxContainer" parent="ShopPanel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="RemoveInfo" type="Label" parent="ShopPanel/MarginContainer/VBoxContainer/TabContainer/Remove Cards"]
layout_mode = 2
text = "Select a card to permanently remove from your deck."
autowrap_mode = 2

[node name="RemoveContainer" type="HBoxContainer" parent="ShopPanel/MarginContainer/VBoxContainer/TabContainer/Remove Cards"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="ShopPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="ShopPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Continue to Next Hole"
